# wasm-app-boilerplate

./: .travis.yml  Cargo.toml  OLD-.travis.yml  README.md  index.html  jest.config.js  main.js  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.release.js
.github/workflows/: build.yml
_static/: core-worker-shim.js  fractal-worker-shim.js
_static/app/: worker-shim.js
_static/media/shaders/: bg_vertex.glsl  smiley_vertex.glsl
crates/audio/: Cargo.toml
crates/audio/src/: assets.rs  audio.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: consts.rs  core_loop.rs  lib.rs  world.rs
crates/core/src/audio/: assets.rs  audio.rs  events.rs  mod.rs
crates/core/src/components/: components.rs
crates/core/src/events/: event_sender.rs  events.rs  handle_events.rs  handle_io_event.rs  mod.rs
crates/core/src/game_loop/: game_loop.rs  mod.rs
crates/core/src/renderer/: assets.rs  mod.rs  renderer.rs
crates/core/src/state/: extract_audio.rs  extract_render.rs  state.rs
crates/core/src/systems/: audio.rs  graphics.rs  loaders.rs  mod.rs  motion.rs  render.rs  state.rs  ui.rs
crates/core/src/world/: world.rs
crates/fractal/: Cargo.toml
crates/fractal/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: assets.rs  events.rs  lib.rs  renderer.rs
crates/shared/: Cargo.toml
crates/shared/src/: consts.rs  lib.rs  state.rs
crates/shared/src/events/: from_js.rs  from_rust.rs  io_event_data.rs  io_event_index.rs  mod.rs
crates/shared/src/state/: audio.rs  mod.rs  renderer.rs  ui.rs
media/shaders/: fragment.glsl
src/: index.html  index.ts
src/app/: Cargo.toml
src/app/src/: app.rs  lib.rs  ui.rs
src/crates/audio/: Cargo.toml
src/crates/audio/src/: assets.rs  audio.rs  lib.rs
src/crates/core/: Cargo.toml
src/crates/core/src/: audio.rs  core_loop.rs  events.rs  lib.rs  render.rs  state.rs  ui.rs
src/crates/core/src/events/: events.rs  mod.rs
src/crates/core/src/state/: extract_audio.rs  extract_render.rs  extract_ui.rs  mod.rs  state.rs
src/crates/renderer/: Cargo.toml
src/crates/renderer/src/: assets.rs  lib.rs  renderer.rs  state.rs
src/crates/shared/: Cargo.toml
src/crates/shared/src/: consts.rs  events.rs  lib.rs  renderer.rs
src/crates/shared/src/events/: data.rs  from_js.rs  from_rust.rs
src/crates/shared/src/state/: audio.rs  mod.rs  renderer.rs  ui.rs
src/main/: index.ts  tsconfig.json
src/main/audio/: audio.ts
src/main/events/: events.ts
src/main/ui/: state.ts  ui.css  ui.ts
src/main/ui/controls/: audio-toggle.css  audio-toggle.ts  velocity-slider.css  velocity-slider.ts
src/main/ui/pages/: home-page.ts
src/main/ui/results/: results.css  results.ts
src/main/ui/text-input/: text-input.ts
src/renderer/: Cargo.toml
src/renderer/src/: lib.rs  renderer.rs
src/typescript/: tsconfig.json
src/typescript/entry/: index.html  index.ts  tsconfig.json
src/typescript/shared/: tsconfig.json
src/typescript/shared/events/: events.ts
src/typescript/ui/: state.ts  tsconfig.json  ui.ts
src/typescript/ui/controls/: audio-toggle.ts  velocity-slider.ts
src/typescript/ui/pages/: home-page.css  home-page.ts
src/ui/: events.ts  state.ts  tsconfig.json  ui.ts
src/ui/results/: results.ts
src/ui/text-input/: text-input.css  text-input.ts
typescript/: tsconfig.json
typescript/config/: config.ts
typescript/entry/: index.html  index.ts
typescript/events/: bridge-events.ts  events.ts
typescript/state/: state.ts
typescript/tests/: events.spec.ts
typescript/ui/: ui.css  ui.ts
typescript/ui/controls/: audio-toggle.ts  speed-slider.ts  start-button.ts  velocity-slider.css  velocity-slider.ts
typescript/ui/pages/: home-page.css  home-page.ts
typescript/utils/: xstate.ts
wasm/core/pkg/: my_core.d.ts  my_core.js  my_core_bg.d.ts  my_core_bg.wasm
wasm/fractal/pkg/: my_fractal.js  my_fractal_bg.wasm
