[package]
name = "my_audio"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path="../shared", features = ["events_from_rust"]}
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
cfg-if = "0.1.9"
log = "0.4.8"
num-traits = "0.2.8"
num-derive = "0.2.5"
serde = { version = "1.0.99", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wasm-bindgen-futures= { version = "0.3.27", features = ["futures_0_3"] }
awsm_web = { version = "0.0.8", features = ["audio", "loaders"], default-features = false }
# awsm_web = { path="../../../../awsm/crates/web", features = ["audio", "loaders"], default-features = false }
wee_alloc = "0.4.5"
web-sys = { version = "^0.3.27", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AudioContextOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioDestinationNode",
    "AudioBufferOptions",
    'Event',
] }

console_log = { version = "0.1.2", optional = true}
console_error_panic_hook = {version = "0.1.6", optional = true}


[features]
# TODO - remove these when we can really use dev feature (see https://users.rust-lang.org/t/dependencies-based-on-profile/32386/4)
default = ["console_log", "console_error_panic_hook"]
dev = ["console_log", "console_error_panic_hook"]