[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"

[dependencies]
shared = { path="../shared", features = ["renderer", "audio", "ui"]}
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
cfg-if = "0.1.9"
log = "0.4.8"
serde = { version = "1.0.99", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wee_alloc = "0.4.5"
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
awsm_web = { version = "0.0.8", features = ["tick"], default-features = false }