[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"
cfg-if = "0.1.10"
log = "0.4.8"
nalgebra = "0.19.0"
float-cmp = "0.6.0"
serde = { version = "1.0.103", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
num-traits = "0.2.10"
num-derive = "0.3.0"
wee_alloc = "0.4.5"
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
awsm_web = { version = "0.0.11", features = ["tick", "webgl", "loaders", "audio"], default-features = false }
wasm-bindgen-futures= { version = "0.4.5"}
console_log = { version = "0.1.2", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.32", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AudioContextOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioDestinationNode",
    "AudioBufferOptions",
    'Event',
    'HtmlCanvasElement'
] }

[features]
# TODO - remove these when we can really use dev feature (see https://users.rust-lang.org/t/dependencies-based-on-profile/32386/4)
default = ["console_log", "console_error_panic_hook"]
dev = ["console_log", "console_error_panic_hook"]
