[package]
name = "shared"
version = "0.1.0"
authors = ["dakom <david.komer@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.8"
num-derive = "0.2.5"
serde = { version = "1.0.99", features = ["derive"] }
wasm-bindgen = {version = "0.2.50", optional = true }
js-sys = { version = "0.3.27", optional = true }
serde-wasm-bindgen = {version = "0.1.3", optional = true }

[features]
default = []
renderer = []
audio = []
ui = []
events_from_rust = ["js-sys", "wasm-bindgen", "serde-wasm-bindgen"]