[package]
name = "shared"
version = "0.1.0"
authors = ["dakom <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
num-traits = "0.2.8"
num-derive = "0.2.5"

[features]
default = []
renderer = []
audio = []
ui = []